@@ -45,6 +45,7 @@ check_fields($fields);
  * Permissions
  */
 $dbItems = API::Item()->get(array(
+	'output' => array('itemid'),
 	'itemids' => $_REQUEST['itemid'],
 	'webitems' => true,
 ));
