@@ -54,6 +54,7 @@ $dbItems = API::Item()->get(array(
 	'filter' => array(
 		'flags' => array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_PROTOTYPE, ZBX_FLAG_DISCOVERY_CREATED)
 	),
+	'output' => array('itemid'),
 	'webitems' => true,
 	'preservekeys' => true
 ));
